Z-index fix On Full screen

--- a/src/static/scss/assetPlatformTable.scss
+++ b/src/static/scss/assetPlatformTable.scss
@@ -159,6 +159,7 @@
       right: 0;
       bottom: 0;
       background: white;
+      z-index: 2;
     }
   }
   .areaBelowTable {
@@ -258,6 +259,7 @@
       right: 0;
       bottom: 0;
       background: white;
+      z-index: 2;
     }
   }
 }
